# scriptorium

./: .env.example  .gitignore  CLAUDE.md  PRODUCT.md  README.md  SPEC.md  build.bat  build.sh  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: new_script.md
.github/workflows/: release.yml
core/: __init__.py  argparse.py  categories.py  config.py  env.py  outputs.py  paths.py  registry.py  runner.py
packaging/: build.bat  build.ps1  build.sh  build_installer.bat  build_linux.sh  entrypoint.py  installer.iss  logo.icns  scriptorium-linux.spec  scriptorium-win.spec  scriptorium.spec
scripts/: __init__.py
scripts/api/: __init__.py
scripts/av/: __init__.py  _utils.py  convert.py  dump_frames.py  extract_frames.py  filmstrip.py  join.py  split.py  tag.py  to_anim.py  trim.py  video_crop.py  volume.py
scripts/downloads/: __init__.py  download.py
scripts/formats/: __init__.py  _utils.py  convert_audio.py  convert_docs.py  convert_image.py  convert_tabular.py  convert_video.py
scripts/gif/: __init__.py  make_gif.py
scripts/homeassistant/: __init__.py
scripts/llm/: __init__.py
scripts/lora/: __init__.py  _dataset.py  export_captions.py  import_captions.py  renumber.py  validate.py
scripts/photo/: __init__.py  remove_bg.py
scripts/printing/: __init__.py
scripts/sitemaps/: __init__.py  status_check.py
scripts/speech/: __init__.py  _providers.py  transcribe.py
scripts/tabular/: __init__.py
scripts/telegram/: __init__.py  _charts.py  _group_charts.py  _group_metrics.py  _group_parsing.py  _group_pdf.py  _metrics.py  _parsing.py  _pdf.py  _profanity_en.py  _profanity_ru.py  _runtime.py  _stopwords_en.py  _stopwords_ru.py  chat_analysis.py  embed_messages.py  group_analysis.py  preprocess.py
scripts/util/: __init__.py  cleanup.py  notify.py
scripts/web/: __init__.py  serve.py
tests/: __init__.py
tests/av/: __init__.py  test_convert.py  test_dump_frames.py  test_extract_frames.py  test_join.py  test_split.py  test_tag.py  test_to_anim.py  test_trim.py  test_utils.py  test_video_crop.py  test_volume.py
tests/core/: test_argparse.py  test_categories.py  test_config.py  test_env.py  test_outputs.py  test_paths.py  test_registry.py  test_runner.py
tests/downloads/: __init__.py  test_download.py
tests/formats/: __init__.py  test_convert_audio.py  test_convert_docs.py  test_convert_image.py  test_convert_tabular.py  test_convert_video.py  test_utils.py
tests/gif/: __init__.py  test_make_gif.py
webapp/: __init__.py  _form.py  app.py
(+49 files in other folders)
