[project]
name = "scriptorium"
version = "0.1.0"
description = "Themed one-off scripts with a future browser UI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
av      = ["ffmpeg-python>=0.2"]
photo   = ["Pillow>=11.0"]
tabular = ["pandas>=2.2", "openpyxl>=3.1"]
web     = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev     = ["ruff>=0.9", "pytest>=8.0"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
